# SDLNGL

./: CMakeLists.txt  README.md  SDLNGL  SDLNGL.pro  SDLNGL.vcxproj
include/: NGLDraw.h
src/: NGLDraw.cpp  main.cpp
